log
Sat 25 Mar 2023 03:48:07 PM UTC: 
 tests:  0|6
total_score: 0/70
8074aa1
Sat 25 Mar 2023 03:55:02 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list->head = NULL
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:5: error: expected ‘;’ before ‘return’
   34 |     return list;
      |     ^~~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0604b6e
Sat 25 Mar 2023 03:55:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List->head = NULL
      |       ^~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9172db4
Sat 25 Mar 2023 04:04:20 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:26: error: too few arguments to function ‘calloc’
   33 |   List * lista = (List *)calloc(sizeof(List));
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
4083246
Sat 25 Mar 2023 04:04:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5bebf02
Sat 25 Mar 2023 04:16:27 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
6626892
Sat 25 Mar 2023 04:17:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
a8bb5e8
Sat 25 Mar 2023 04:19:52 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
7d1809c
Sat 25 Mar 2023 04:20:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
6d120c0
Sat 25 Mar 2023 04:20:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
f398395
Sat 25 Mar 2023 04:20:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
20558a0
Sat 25 Mar 2023 04:21:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
8ca0899
Sat 25 Mar 2023 04:22:54 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * list)
      | ^~~~
Compilation failed
ffe443a
Sat 25 Mar 2023 05:22:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * list)
      | ^~~~
Compilation failed
d1c5b9a
Sat 25 Mar 2023 05:23:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * list)
      | ^~~~
Compilation failed
6a010f3
Sat 25 Mar 2023 05:23:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * list)
      | ^~~~
Compilation failed
37a2d68
Sat 25 Mar 2023 05:26:12 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
a2f4022
Sat 25 Mar 2023 05:30:49 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
eb62501
Sat 25 Mar 2023 05:35:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
51fc301
Sat 25 Mar 2023 05:45:53 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
2569a75
Sat 25 Mar 2023 06:17:28 PM UTC: 
 list.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c763481
Sat 25 Mar 2023 06:18:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6327fb0
Sat 25 Mar 2023 06:22:03 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5976ddc
Sat 25 Mar 2023 06:29:41 PM UTC: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 25/70
fc344ca
Sat 25 Mar 2023 06:43:12 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|3
total_score: 40/70
9aaa489
Sat 25 Mar 2023 07:33:28 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
8541153
Sat 25 Mar 2023 08:39:12 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
ecfc587
Sat 25 Mar 2023 08:40:49 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
5d279ec
